--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <div class="card" style="width: 70rem;">
                           <div class="card-body">
                             <p class="card-text">Prototype is the visual representation of the wireframe, how exactly final application will look alike.</p>
-                            <a href="img/Prototype.pdf" class="btn btn-primary">Portfolio Pdf</a>
+                            <a href="img/Prototype_compressed.pdf" class="btn btn-primary">Portfolio Pdf</a>
                           </div>
                         </div>
 
